--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,6 +1,10 @@
 {
-  "type": "sqlite",
-  "database": "./src/database/database.sqlite",
+  "type": "postgres",
+  "host": "localhost",
+  "port": 5432,
+  "username": "postgres",
+  "password": "postgres",
+  "database": "happy",
   "migrations": [
     "./src/database/migrations/*.ts"
   ],
