--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,17 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
+    "pg": "^8.7.1",
     "sqlite3": "^5.0.0",
     "typeorm": "^0.2.28",
+    "uuid": "^8.3.2",
     "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/multer": "^1.4.4",
+    "@types/uuid": "^8.3.1",
     "@types/yup": "^0.29.8",
     "ts-node-dev": "^1.0.0-pre.65",
     "typescript": "^4.0.3"
